--- a/Project Todo/File.css
+++ b/Project Todo/File.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url(/img/istockphoto-1189708364-612x612.jpg);
+    background: url(img/istockphoto-1189708364-612x612.jpg);
     font-size: 1em;
 }
 
@@ -185,4 +185,26 @@ h1 {
     font-size: 4em;
     text-align: center;
     align-self: center;
+}
+
+@media screen and (max-width: 767px){
+    .container {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .Animated-container {
+        width: 50%;
+        height: 50%;
+        display: flex;
+        font-size: 0.5rem;
+    }
+    button{
+        width: 20vmin;
+        height: 8vmin;
+        padding: 1em 0.5em;
+        font-size: 0.4rem;
+    }
 }
